--- a/list.html
+++ b/list.html
@@ -7,6 +7,11 @@
     <title>Warranty Requests List</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/styles.css">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="static/js/auth.js"></script>
+    <script src="static/js/dashboard.js"></script>
+    <script src="static/js/sheets.js"></script>
+    <script src="static/js/list.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -36,7 +41,6 @@
             </tbody>
         </table>
     </div>
-    <script src="static/js/list.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
