--- a/edit.html
+++ b/edit.html
@@ -7,6 +7,12 @@
     <title>Edit Warranty Request</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/styles.css">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="static/js/auth.js"></script>
+    <script src="static/js/dashboard.js"></script>
+    <script src="static/js/sheets.js"></script>
+    <script src="static/js/list.js"></script>
+    <script src="static/js/edit.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -29,7 +35,7 @@
             <button type="submit" class="btn btn-primary">Save Changes</button>
         </form>
     </div>
-    <script src="static/js/edit.js"></script>
+    
     <script src="static/js/sheets.js"></script>
 </body>
 </html>
