--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
             </div>
             <div class="col-md-4">
                 <div class="card text-white bg-warning mb-3">
-                    <div class="card-header">Investigating</div>
+                    <div class="card-header">In Progress</div>
                     <div class="card-body">
-                        <h5 class="card-title" id="investigating-count">0</h5>
-                        <a href="list.html?status=Investigating" class="btn btn-light">View Investigating Requests</a>
+                        <h5 class="card-title" id="inprogress-count">0</h5>
+                        <a href="list.html?status=InProgress" class="btn btn-light">View In Progress Requests</a>
                     </div>
                 </div>
             </div>
@@ -82,15 +82,6 @@
                     <div class="card-body">
                         <h5 class="card-title" id="rejected-count">0</h5>
                         <a href="list.html?status=Rejected" class="btn btn-light">View Rejected Requests</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card text-white bg-info mb-3">
-                    <div class="card-header">Actioning</div>
-                    <div class="card-body">
-                        <h5 class="card-title" id="actioning-count">0</h5>
-                        <a href="list.html?status=Actioning" class="btn btn-light">View Actioning Requests</a>
                     </div>
                 </div>
             </div>
