--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <div class="card text-white bg-warning mb-3">
                     <div class="card-header">In Progress</div>
                     <div class="card-body">
-                        <h5 class="card-title" id="inprogress-count">0</h5>
-                        <a href="list.html?status=InProgress" class="btn btn-light">View In Progress Requests</a>
+                        <h5 class="card-title" id="progress-count">0</h5>
+                        <a href="list.html?status=Progress" class="btn btn-light">View In Progress Requests</a>
                     </div>
                 </div>
             </div>
