--- a/list.html
+++ b/list.html
@@ -21,6 +21,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="list.html">All Entries</a>
                 </li>
+                <li class="nav-item">
+            	    <button id="signin-button" class="btn btn-outline-success my-2 my-sm-0">Sign In</button>
+		        </li>
             </ul>
         </div>
     </nav>
