--- a/list.html
+++ b/list.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="static/js/auth.js"></script>
     <script src="static/js/list.js"></script>
+    <script src="static/js/sheets.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
