--- a/edit.html
+++ b/edit.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Warranty Request</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="static/js/auth.js"></script>
     <script src="static/js/edit.js"></script>
 </head>
