--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="static/js/auth.js"></script>
+    <script src="static/js/sheets.js"></script>
     <script src="static/js/dashboard.js"></script>
 </head>
 <body>
