--- a/list.html
+++ b/list.html
@@ -34,6 +34,7 @@
                 <tr>
                     <th>Claim Number</th>
                     <th>Status</th>
+		    <th>In Field</th>	
                     <th>Submission Date</th>
                     <th>Shop Name</th>
                     <th>Actions</th>
