--- a/index.html
+++ b/index.html
@@ -1,105 +1,30 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warranty Dashboard</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/styles.css">
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="static/js/auth.js"></script>
-    <script src="static/js/dashboard.js"></script>
-    <script src="static/js/sheets.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Warranty Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="js/supabaseClient.js"></script>
+  <script src="js/auth.js"></script>
+
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Dashboard</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="list.html">All Entries</a>
-                </li>
-		<li class="nav-item">
-            	    <button id="signin-button" class="btn btn-outline-success my-2 my-sm-0">Sign In</button>
-		</li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container mt-5">
-        <div class="row">
-            <!-- Panel for All Entries -->
-            <div class="col-md-4">
-                <div class="card text-white bg-secondary mb-3">
-                    <div class="card-header">All Entries</div>
-                    <div class="card-body">
-                        <h5 class="card-title">View All Entries</h5>
-                        <a href="list.html" class="btn btn-light">View All</a>
-                    </div>
-                </div>
-            </div>
-            <!-- Panel for New Requests -->
-            <div class="col-md-4">
-                <div class="card text-white bg-primary mb-3">
-                    <div class="card-header">New Requests</div>
-                    <div class="card-body">
-                        <h5 class="card-title" id="new-requests-count">0</h5>
-                        <a href="list.html?status=New" class="btn btn-light">View New Requests</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Additional Panels for Other Statuses -->
-            <div class="col-md-4">
-                <div class="card text-white bg-success mb-3">
-                    <div class="card-header">Viewed</div>
-                    <div class="card-body">
-                        <h5 class="card-title" id="viewed-count">0</h5>
-                        <a href="list.html?status=Viewed" class="btn btn-light">View Viewed Requests</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card text-white bg-warning mb-3">
-                    <div class="card-header">In Progress</div>
-                    <div class="card-body">
-                        <h5 class="card-title" id="progress-count">0</h5>
-                        <a href="list.html?status=Progress" class="btn btn-light">View In Progress Requests</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card text-white bg-danger mb-3">
-                    <div class="card-header">Rejected</div>
-                    <div class="card-body">
-                        <h5 class="card-title" id="rejected-count">0</h5>
-                        <a href="list.html?status=Rejected" class="btn btn-light">View Rejected Requests</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card text-white bg-dark mb-3">
-                    <div class="card-header">Complete</div>
-                    <div class="card-body">
-                        <h5 class="card-title" id="complete-count">0</h5>
-                        <a href="list.html?status=Complete" class="btn btn-light">View Complete Requests</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="container py-4">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2>Warranty Dashboard</h2>
+      <button id="logout-btn" class="btn btn-outline-danger">Logout</button>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <div class="row" id="status-panels">
+      <!-- Status panels will be injected here -->
+    </div>
+  </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+ script src="js/supabaseClient.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/dashboard.js"></script>
 </body>
 </html>
