--- a/list.html
+++ b/list.html
@@ -1,52 +1,38 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warranty Requests List</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/styles.css">
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="static/js/auth.js"></script>
-    <script src="static/js/sheets.js"></script>
-    <script src="static/js/list.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Warranty Requests List</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Dashboard</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="list.html">All Entries</a>
-                </li>
-                <li class="nav-item">
-            	    <button id="signin-button" class="btn btn-outline-success my-2 my-sm-0">Sign In</button>
-		        </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container mt-4">
-        <h2>Warranty Requests List - <span id="status-title"></span></h2>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Claim Number</th>
-                    <th>Status</th>
-		    <th>In Field</th>	
-                    <th>Submission Date</th>
-                    <th>Shop Name</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody id="requests-list">
-                <!-- Rows will be populated by JavaScript -->
-            </tbody>
-        </table>
+  <div class="container py-4">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2 id="page-title">Warranty Requests</h2>
+      <button id="logout-btn" class="btn btn-outline-danger">Logout</button>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="static/js/sheets.js"></script>
+
+    <table class="table table-bordered table-hover">
+      <thead class="table-light">
+        <tr>
+          <th>Claim Number</th>
+          <th>Shop Name</th>
+          <th>End User</th>
+          <th>Product</th>
+          <th>Date Submitted</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody id="requests-table-body">
+        <!-- Rows will be injected here -->
+      </tbody>
+    </table>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="js/supabaseClient.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/list.js"></script>
 </body>
 </html>
