--- a/edit.html
+++ b/edit.html
@@ -1,39 +1,30 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Warranty Request</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/styles.css">
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="static/js/auth.js"></script>
-    <script src="static/js/sheets.js"></script>
-    <script src="static/js/edit.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Edit Warranty Request</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="js/supabaseClient.js"></script>
+  <script src="js/auth.js"></script>
+  <script src="js/edit.js"></script>	
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Dashboard</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="list.html">All Entries</a>
-                </li>
-		        <li class="nav-item">
-            	    <button id="signin-button" class="btn btn-outline-success my-2 my-sm-0">Sign In</button>
-		        </li>                
-            </ul>
-        </div>
-    </nav>
-    <div class="container mt-4">
-        <h2>Edit Warranty Request</h2>
-        <form id="edit-form">
-            <!-- Form fields will be populated by JavaScript -->
-            <button type="submit" class="btn btn-primary">Save Changes</button>
-        </form>
+  <div class="container py-4">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2>Edit Warranty Request</h2>
+      <button id="logout-btn" class="btn btn-outline-danger">Logout</button>
     </div>
-    
-    <script src="static/js/sheets.js"></script>
+
+    <form id="edit-form" class="row g-3">
+      <!-- Fields will be injected here -->
+      <div class="col-12">
+        <button type="submit" class="btn btn-primary"></button>
+      </div>
+    </form>
+  </div>
+
+
 </body>
 </html>
