--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Warranty Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="js/supabaseClient.js"></script>
-  <script src="js/auth.js"></script>
-
+  <script src="static/js/supabaseClient.js"></script>
+  <script src="static/js/auth.js"></script>
+  <script src="static/js/dashboard.js"></script>
 </head>
 <body>
   <div class="container py-4">
@@ -22,9 +22,5 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
- script src="js/supabaseClient.js"></script>
-  <script src="js/auth.js"></script>
-  <script src="js/dashboard.js"></script>
 </body>
 </html>
