--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <!-- Status panels will be injected here -->
     </div>
   </div>
-  <script src="static/js/supabaseClient.js"></script>
-  <script src="static/js/auth.js"></script>
-  <script src="static/js/dashboard.js"></script>
+  <script src="static/js/supabaseClient.js" defer></script>
+  <script src="static/js/auth.js" defer></script>
+  <script src="static/js/dashboard.js" defer></script>
 </body>
 </html>
