--- a/login.html
+++ b/login.html
@@ -10,36 +10,38 @@
   <script src="static/js/auth.js"></script>
  
 </head>
+
 <body class="container py-5">
-  <h2>Login</h2>
-  <form id="login-form">
-    <div class="mb-3">
-      <label for="email" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="email" required />
-    </div>
-    <div class="mb-3">
-      <label for="password" class="form-label">Password</label>
-      <input type="password" class="form-control" id="password" required />
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
+  <h2>Login</h2>
+  <form id="login-form" class="mt-4">
+    <div class="mb-3">
+      <label for="email" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="email" required />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input type="password" class="form-control" id="password" required />
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
 
 
-  <script>
-    const form = document.getElementById('login-form');
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+  <script>
+    const form = document.getElementById('login-form');
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
 
-      const { error } = await supabase.auth.signInWithPassword({ email, password });
+      const { data, error } = await supabase.auth.signInWithPassword({ email, password });
 
-      if ( {
-        alert('Login failed: ' + error.message);
-      } else {
-        window.location.href = 'index.html';
-      }
-    });
-  </script>
+      if (error) {
+        alert('Login failed: ' + error.message);
+      } else {
+        window.location.href = 'index.html';
+      }
+    });
+  </script>
+
 </body>
 </html>
