--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
       const { data, error } = await supabase.auth.signInWithPassword({ email, password });
 
       if (error) {
-        alert('Login failed: ' + error.message);
+        //alert('Login failed: ' + error.message);
       } else {
         window.location.href = 'index.html';
       }
