--- a/list.html
+++ b/list.html
@@ -14,6 +14,7 @@
   <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2 id="page-title">Warranty Requests</h2>
+      <span><a href="index.html">Dashboard</a></span>
       <button id="logout-btn" class="btn btn-outline-danger">Logout</button>
     </div>
 
