--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Warranty Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link rel="shortcut icon" type="image/png" href="{{ "favicon.ico"  | absolute_url }}">
+  <link rel="shortcut icon" type="image/png" href="favicon.ico">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
 </head>
