--- a/edit.html
+++ b/edit.html
@@ -6,9 +6,9 @@
   <title>Edit Warranty Request</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="js/supabaseClient.js"></script>
-  <script src="js/auth.js"></script>
-  <script src="js/edit.js"></script>	
+  <script src="static/js/supabaseClient.js"></script>
+  <script src="static/js/auth.js"></script>
+  <script src="static/js/edit.js"></script>	
 </head>
 <body>
   <div class="container py-4">
