--- a/edit.html
+++ b/edit.html
@@ -18,7 +18,9 @@
     </div>
 
     <form id="edit-form" class="row g-3">
+      <div id="edit-form-div">
       <!-- Fields will be injected here -->
+      </div>
       <div class="col-12">
         <button type="submit" class="btn btn-primary"></button>
       </div>
