--- a/edit.html
+++ b/edit.html
@@ -22,7 +22,7 @@
       <!-- Fields will be injected here -->
       </div>
       <div class="col-12">
-        <button type="submit" class="btn btn-primary"></button>
+        <button type="submit" class="btn btn-primary">Save</button>
       </div>
     </form>
   </div>
