--- a/edit.html
+++ b/edit.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Edit Warranty Request</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="shortcut icon" type="image/png" href="favicon.ico">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="static/js/supabaseClient.js"></script>
   <script src="static/js/auth.js"></script>
