--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">All Entries</h5>
-                        <a href="list.html" class="btn btn-primary">View</a>
+                        <a href="list.html" class="btn btn-light">View</a>
                     </div>
                 </div>
             </div>
