--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     </div>
 
     <div class="row" id="status-panels">
+            <div class="col-md-4">
+                <div class="card text-white bg-secondary mb-3">
+                    <div class="card-header">All Entries</div>
+                    <div class="card-body">
+                        <h5 class="card-title">View All Entries</h5>
+                        <a href="list.html" class="btn btn-light">View All</a>
+                    </div>
+                </div>
+            </div>      
       <!-- Status panels will be injected here -->
     </div>
   </div>
