--- a/list.html
+++ b/list.html
@@ -23,6 +23,7 @@
       <thead class="table-light">
         <tr>
           <th>Claim Number</th>
+          <th>In Field</th>
           <th>Shop Name</th>
           <th>End User</th>
           <th>Product</th>
