--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <div class="row" id="status-panels">
             <div class="col-md-4">
                 <div class="card text-white bg-secondary mb-3">
-                    <div class="card-header">All Entries</div>
+                    <h5 class="card-title">All</h5>
+                    <p class="card-text fs-3">&nbsp;</p>
                     <div class="card-body">
                         <h5 class="card-title">View All Entries</h5>
                         <a href="list.html" class="btn btn-light">View All</a>
