--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
     </div>
 
     <div class="row" id="status-panels">
-            <div class="col-md-4">
-                <div class="card text-white bg-secondary mb-3">
-                    <h5 class="card-title">All</h5>
-                    <p class="card-text fs-3">&nbsp;</p>
-                    <div class="card-body">
-                        <h5 class="card-title">View All Entries</h5>
-                        <a href="list.html" class="btn btn-light">View All</a>
-                    </div>
-                </div>
-            </div>      
+      <div class="col-md-4 mb-4">
+        <div class="card text-white bg-secondary h-100">
+          <div class="card-body">
+            <h5 class="card-title">All</h5>
+            <p class="card-text fs-3">&nbsp;</p>
+          </div>
+          <div class="card-footer bg-transparent border-top-0">
+            <a href="list.html" class="btn btn-light">View All</a>
+          </div>
+        </div>
+      </div>
       <!-- Status panels will be injected here -->
     </div>
   </div>
