--- a/edit.html
+++ b/edit.html
@@ -10,6 +10,7 @@
   <script src="static/js/supabaseClient.js"></script>
   <script src="static/js/auth.js"></script>
   <script src="static/js/edit.js"></script>	
+  <style src="static/css/styles.css"></style>
 </head>
 <body>
   <div class="container py-4">
