--- a/edit.html
+++ b/edit.html
@@ -10,7 +10,7 @@
   <script src="static/js/supabaseClient.js"></script>
   <script src="static/js/auth.js"></script>
   <script src="static/js/edit.js"></script>	
-  <style src="static/css/styles.css"></style>
+  <link rel='stylesheet' href="static/css/styles.css" type='text/css' media='all' />
 </head>
 <body>
   <div class="container py-4">
