--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Dashboard</a>
+        <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,9 +24,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="list.html">All Entries</a>
                 </li>
-		            <li class="nav-item">
+		<li class="nav-item">
             	    <button id="logout-btn" class="btn btn-outline-danger">Logout</button>
-		            </li>
+		</li>
             </ul>
         </div>
     </nav>
