--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <!-- Status panels will be injected here -->
     </div>
   </div>
+  <div>Infield list</div>
   <script src="static/js/supabaseClient.js" defer></script>
   <script src="static/js/auth.js" defer></script>
   <script src="static/js/dashboard.js" defer></script>
