--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
       <!-- Status panels will be injected here -->
     </div>
   </div>
+<!-- In Field Panels -->
+    <div class="container py-4">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2>Infield Warranty Dashboard</h2>
+      
+    </div>
+
+    <div class="row" id="status-panels-infield">
+      <!-- Status panels will be injected here -->
+    </div>
+  </div>
   <div>Infield panel - New, Progress, Complete</div>
   <script src="static/js/supabaseClient.js" defer></script>
   <script src="static/js/auth.js" defer></script>
