--- a/edit.html
+++ b/edit.html
@@ -53,7 +53,7 @@
 
   <script>
 	  function updateTextbox(value) {
-	    document.getElementById('myTextbox').value = value;
+	    document.getElementById('status-change').value = value;
 	  }
 
   </script>
