--- a/edit.html
+++ b/edit.html
@@ -53,6 +53,7 @@
 
   <script>
 	  function updateTextbox(value) {
+		  alert('Get there');
 	    document.getElementById('status-change').value = value;
 	  }
 
