--- a/edit.html
+++ b/edit.html
@@ -45,7 +45,7 @@
       <div id="edit-form-div">
       <!-- Fields will be injected here -->
       </div>
-      <div class="col-12">
+      <div id="edit-form-button" class="col-12">
         <button type="submit" class="btn btn-primary">Save</button>
       </div>
     </form>
