--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
   </div>
 <!-- In Field Panels -->
-    <div class="container py-4">
+  <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2>Infield Warranty Dashboard</h2>
       
@@ -63,6 +63,17 @@
     </div>
   </div>
 
+<!-- Report Panels -->
+  <div class="container py-4">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2>Reporting</h2>
+      
+    </div>
+
+    <div class="row" id="status-panels-reports">
+      <!-- Report panels will be injected here -->
+    </div>
+  </div>
   <script src="static/js/supabaseClient.js" defer></script>
   <script src="static/js/auth.js" defer></script>
   <script src="static/js/dashboard.js" defer></script>
