--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="shortcut icon" type="image/png" href="favicon.ico">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-
+  <link rel='stylesheet' href="static/css/styles.css" type='text/css' media='all' />
 </head>
 <body>
   <!-- Navigation Bar -->
