Get the modal styled

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
   
 	<!-- Modal -->
 	<div id="statusLogsModal" class="modal" style="display:none;">
-	  <div class="modal-content">
-	    <span class="close">&times;</span>
+	  <div class="modal-content" id="modal-contentPanel">
+	    <span id="closeButton" class="close">&times;</span>
 	    <h4>Status Logs</h4>
 	    <ul id="logsList"></ul>
 	  </div>
