--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2>Warranty Dashboard</h2>
-      
+      <button id="viewLogsBtn" class="btn btn-info">View Status Logs</button>
     </div>
 
     <div class="row" id="status-panels">
