--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <link rel='stylesheet' href="static/css/styles.css" type='text/css' media='all' />
 </head>
 <body>
+	<header class="app-header">
+	  <div class="container d-flex justify-content-between align-items-center">
+		<h1 class="app-title">Warranty Manager</h1>
+		<nav class="app-nav">
+		  <a href="index.html">Dashboard</a>
+		  <a href="list.html">All Entries</a>
+		  <button id="logout-btn" class="btn btn-outline-light btn-sm">Logout</button>
+		</nav>
+	  </div>
+	</header>
+
   <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Home</a>
