--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <link rel="shortcut icon" type="image/png" href="favicon.ico">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <link rel='stylesheet' href="static/css/styles.css" type='text/css' media='all' />
+  <link rel="stylesheet" href="static/css/responsive_header.css" />
+
 </head>
 <body>
 	<header class="app-header">
-	  <div class="container d-flex justify-content-between align-items-center">
+	  <div class="container">
 		<h1 class="app-title">Warranty Manager</h1>
+		<button class="menu-toggle" onclick="document.querySelector('.app-nav').classList.toggle('show')">&#9776;</button>
 		<nav class="app-nav">
 		  <a href="index.html">Dashboard</a>
 		  <a href="list.html">All Entries</a>
@@ -22,7 +25,7 @@
 	</header>
 
   <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!--  <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,7 +43,7 @@
 		</li>
             </ul>
         </div>
-    </nav>
+    </nav> -->
   <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2>Warranty Dashboard</h2>
