--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<header class="app-header">
 	  <div class="container">
-		<h1 class="app-title">Warranty Manager</h1>
+		<img src="/static/images/Pool-Pro-Logo.png"><h1 class="app-title">Warranty Manager</h1>
 		<button class="menu-toggle" onclick="document.querySelector('.app-nav').classList.toggle('show')">&#9776;</button>
 		<nav class="app-nav">
 		  <a href="index.html">Dashboard</a>
@@ -24,26 +24,6 @@
 	  </div>
 	</header>
 
-  <!-- Navigation Bar -->
-  <!--  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="list.html">All Entries</a>
-                </li>
-		<li class="nav-item">
-            	    <button id="logout-btn" class="btn btn-outline-danger">Logout</button>
-		</li>
-            </ul>
-        </div>
-    </nav> -->
   <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2>Warranty Dashboard</h2>
