--- a/list.html
+++ b/list.html
@@ -10,28 +10,21 @@
   <script src="static/js/supabaseClient.js"></script>
   <script src="static/js/auth.js"></script>
   <script src="static/js/list.js"></script>
+  <link rel="stylesheet" href="static/css/responsive_header.css" />
+
 </head>
 <body>
-  <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <span class="navbar-brand">List</span>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="list.html">All Entries</a>
-                </li>
-		<li class="nav-item">
-            	    <button id="logout-btn" class="btn btn-outline-danger">Logout</button>
-		</li>
-            </ul>
-        </div>
-    </nav>  
+	<header class="app-header">
+	  <div class="container">
+		<img src="static/images/Pool-Pro-Logo.png" height="70px"><h1 class="app-title">Warranty Manager</h1>
+		<button class="menu-toggle" onclick="document.querySelector('.app-nav').classList.toggle('show')">&#9776;</button>
+		<nav class="app-nav">
+		  <a href="index.html">Dashboard</a>
+		  <a href="list.html">All Entries</a>
+		  <button id="logout-btn" class="btn btn-outline-light btn-sm">Logout</button>
+		</nav>
+	  </div>
+	</header> 
   <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h2 id="page-title">Warranty Requests</h2>
