Header image link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<header class="app-header">
 	  <div class="container">
-		<img src="static/images/Pool-Pro-Logo.png" height="70px"><h1 class="app-title">Warranty Manager</h1>
+		<a href="index.html"><img src="static/images/Pool-Pro-Logo.png" height="70px"><h1 class="app-title">Warranty Manager</h1></a>
 		<button class="menu-toggle" onclick="document.querySelector('.app-nav').classList.toggle('show')">&#9776;</button>
 		<nav class="app-nav">
 		  <a href="index.html">Dashboard</a>
