--- a/admin/admin-modelnumber.html
+++ b/admin/admin-modelnumber.html
@@ -12,8 +12,8 @@
   <script src="../static/js/supabaseClient.js"></script>
   <script src="../static/js/auth.js"></script>
   <script src="../static/js/admin-modelnumber.js"></script>	
-  <link rel='stylesheet' href="static/css/styles.css" type='text/css' media='all' />
-  <link rel="stylesheet" href="static/css/responsive_header.css" />
+  <link rel='stylesheet' href="../static/css/styles.css" type='text/css' media='all' />
+  <link rel="stylesheet" href="../static/css/responsive_header.css" />
 </head>
 <body class="bg-light">
 	<header class="app-header">
