--- a/admin/admin-modelnumber.html
+++ b/admin/admin-modelnumber.html
@@ -7,7 +7,7 @@
   <title>Admin - Model Number</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link rel="shortcut icon" type="image/png" href="favicon.ico">
+  <link rel="shortcut icon" type="image/png" href="../favicon.ico">
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script src="../static/js/supabaseClient.js"></script>
   <script src="../static/js/auth.js"></script>
