--- a/admin/admin-modelnumber.html
+++ b/admin/admin-modelnumber.html
@@ -18,11 +18,11 @@
 <body class="bg-light">
 	<header class="app-header">
 	  <div class="container">
-		<a href="index.html"><img src="../static/images/Pool-Pro-Logo.png" height="70px"></a><h1 class="app-title">Warranty Manager</h1>
+		<a href="../index.html"><img src="../static/images/Pool-Pro-Logo.png" height="70px"></a><h1 class="app-title">Warranty Manager</h1>
 		<button class="menu-toggle" onclick="document.querySelector('.app-nav').classList.toggle('show')">&#9776;</button>
 		<nav class="app-nav">
-		  <a href="index.html">Dashboard</a>
-		  <a href="list.html">All Entries</a>
+		  <a href="../index.html">Dashboard</a>
+		  <a href="../list.html">All Entries</a>
 		  <button id="logout-btn" class="btn btn-outline-light btn-sm">Logout</button>
 		</nav>
 	  </div>
